Closed Bug 1670933 Opened 4 years ago Closed 4 years ago

Back button is not enabled by iframe navigation when Fission is enabled

Categories

(Core :: DOM: Navigation, defect, P1)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Fission Milestone M6c
Tracking Status
firefox84 --- fixed

People

(Reporter: johannh, Assigned: peterv)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

STR:

  • Enable Fission
  • Open https://joo.uber.space/back-button in a new tab without any extra session history entries before it (i.e. directly "open link in a new tab" via the context menu, don't open about:newtab first)
  • On the page, use the links and buttons in the iframe at the bottom to add navigations to that iframe.
  • Note that the back button isn't getting enabled. It should be enabled because there's session history to go back to now.

When you hover the history.back() button in the iframe for 3s the back button will be enabled and it looks like all session history is kept correctly, the history change event just seems to be not propagated correctly.

Severity: -- → S3
Fission Milestone: --- → M6c
Priority: -- → P3
Assignee: nobody → peterv
Status: NEW → ASSIGNED
Severity: S3 → S2
Priority: P3 → P1
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/41220106e56d Back button is not enabled by iframe navigation when Fission is enabled. r=smaug,extension-reviewers,zombie
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: