Bug 1670933 - Back button is not enabled by iframe navigation when Fission is enabled. r=smaug,extension-reviewers,zombie

Differential Revision: https://phabricator.services.mozilla.com/D95322